# smart-inventory

./: Cargo.toml  LICENSE  README.md  config.rs  main.rs  models.rs  routes.rs
services/: inventory_service.rs  mod.rs  supplier_service.rs
styles/: main.css
templates/: base.html  index.html  supplier.html
